# intro_to_c

./: .gitignore  Makefile  hello_world  hello_world.c  hello_world.cpp  readme.md
algo/: all.h  insertion_sort.c  main.c  makefile
calculator/: hex_calculator.cpp
environment/: environment_readme.md
gen_tutorial/: readme.md
gen_tutorial/ex01/: ex1  ex1.c  makefile
gen_tutorial/ex02/: ex02  ex02.c  makefile
gen_tutorial/ex03_04/: ex03  ex03.c  makefile
gen_tutorial/ex07/: ex07  ex07.c  makefile
gen_tutorial/ex11/: ex11  ex11.c  makefile
gen_tutorial/ex12/: ex12  ex12.c  makefile
gen_tutorial/ex13/: ex13  ex13.c  makefile
gen_tutorial/ex14/: ex14  ex14.c  makefile
gen_tutorial/ex15/: ex15  ex15.c  makefile
gen_tutorial/ex16/: .ex16.c.swp  ex16  ex16.c
gen_tutorial/ex17/: datafile.txt  ec2_max_change.c  ex17  ex17.c  makefile  stack.c  stack_test
gen_tutorial/ex18/: .ex18.c.swp  ex18  ex18.c
gen_tutorial/ex19/: cpp_ex19  cpp_ex19.cpp  dbg.h  ex19  ex19.c  makefile
gen_tutorial/ex22/: ex22.c  ex22.h  ex22_main  ex22_main.c  makefile
gen_tutorial/ex23/: ex23  ex23.c  makefile
gen_tutorial/ex24/: ex24  ex24.c  makefile
gen_tutorial/ex25/: ex25  ex25.c  makefile
gen_tutorial/ex26/: logfind.c  makefile
gen_tutorial/ex27/: never_trust_input.c
gen_tutorial/ex28/: Makefile
gen_tutorial/ex28/src/: main.c
gen_tutorial/ex29/: Makefile  ex29
gen_tutorial/ex37/: Makefile
gen_tutorial/lib/: dbg.h
opengl/: CMakeLists.txt
opengl/include/glad/: glad.h
opengl/src/: CMakeLists.txt  head.h  main.cpp  main.h
opengl/src/examples/: CMakeLists.txt  common.cpp  common.h
opengl/src/examples/1-hello-window/: hello_window.cpp  hello_window.h
opengl/src/examples/2-hello-triangle/: hello_triangle.cpp  hello_triangle.h
opengl/src/examples/tmp/: e.h  test_example.cpp
sdl_tutorial/: 01_hello_SDL.cpp  Makefile
tut-cmake/: CMakeLists.txt
tut-cmake/hello/: CMakeLists.txt
tut-cmake/hello/src/goodbye/: goodbye.cpp
tut-cmake/hello/src/hello/: hello.cpp  hello.h
tut-cmake/src/: CMakeLists.txt  main.cpp
(+29 files in other folders)
